# blog-with-Flask-and-MongoDB-ODM

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.loadtest  Dockerfile.prod  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: app.py  cli.py  gunicorn_config.py  main.py
app/base/: config.py  custom_types.py  exception_handler.py  middleware.py  routers.py
app/base/utils/: __init__.py  decorator.py  file.py  query.py  response.py  string.py
app/post/: models.py
app/post/routers/: __init__.py  comments.py  posts.py  reactions.py
app/post/schemas/: comments.py  posts.py
app/user/: auth.py  models.py  routers.py  schemas.py  utils.py
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  data.py  test_base.py  test_post.py  test_user.py
