[tool.poetry]
name = "blog-with-Flask-and-MongoDB-ODM"
version = "0.1.0"
description = ""
authors = ["Nayan Biswas <nayan32biswas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Faker = "18.3.2"
flask = "^2.2.3"
gunicorn = "20.1.0"
pydantic = "~1.10.7"
pyjwt = "~2.6.0"
pymongo = { version = "~4.3.3", extras = ["srv"] }
python-slugify = "^8.0.1"
typer = "0.7.0"
types-python-slugify = "^8.0.0.3"
# mongodb-odm = "0.2.2"
mongodb-odm = { git = "https://github.com/nayan32biswas/mongodb-odm.git", rev = "main" }

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
coverage = { extras = ["toml"], version = "^7.2.2" }
flake8 = "^5.0.4"
isort = "^5.12.0"
mypy = "1.1.1"
pre-commit = "^3.2.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "init"

[tool.coverage.run]
parallel = true
# source = ["app"]
context = '${CONTEXT}'

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']
# omit = ["tests/*.py"]

[tool.isort]
profile = "black"
known_third_party = ["mongodb_odm"]


[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = ""
warn_unused_ignores = false
