[tool.poetry]
name = "blog-with-Flask-and-MongoDB-ODM"
version = "0.1.0"
description = ""
authors = ["Nayan Biswas <nayan32biswas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
flask-cors = "^4.0.0"
gunicorn = "^20.1.0"
pydantic = "^1.10.13"
pyjwt = "^2.6.0"
pymongo = { version = "^4.3.3", extras = ["srv"] }
python-slugify = "^8.0.1"
typer = "^0.7.0"
types-python-slugify = "^8.0.0.3"
# mongodb-odm = "0.2.4"
mongodb-odm = { git = "https://github.com/nayan32biswas/mongodb-odm.git", rev = "main" }

[tool.poetry.group.dev.dependencies]
# Formatter and linters
mypy = "1.5.0"
ruff = "^0.1.5"
# Test
coverage = { extras = ["toml"], version = "^7.2.2" }
pytest = "^7.2.2"
Faker = "18.3.2"
httpx = "^0.23.0"
# Others
pre-commit = "^3.3.3"
types-passlib = "1.7.7.11"
types-flask-cors = "^4.0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "init"

[tool.coverage.run]
parallel = true
# source = ["app"]
context = '${CONTEXT}'

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']
omit = ["tests/*.py"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ""
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ""
warn_unused_ignores = false

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["B008"]

[tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["mongodb_odm", "pydantic", "flask"]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
