[tool.poetry]
name = "blog-with-Flask-and-MongoDB-ODM"
version = "0.1.0"
description = ""
authors = ["Nayan Biswas <nayan32biswas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
pydantic = "^2.5.3"
pyjwt = "^2.8.0"
pymongo = { version = "^4.6.1", extras = ["srv"] }
python-slugify = "^8.0.2"
typer = "^0.9.0"
types-python-slugify = "^8.0.2.20240127"
mongodb-odm = "^1.0.0"
# mongodb-odm = { git = "https://github.com/nayan32biswas/mongodb-odm.git", rev = "main" }

[tool.poetry.group.dev.dependencies]
# Formatter and linters
mypy = "^1.8.0"
ruff = "^0.1.14"
# Test
coverage = { extras = ["toml"], version = "^7.4.1" }
pytest = "^8.0.0"
Faker = "^22.5.1"
httpx = "^0.26.0"
# Others
pre-commit = "^3.6.0"
types-passlib = "^1.7.7.20240106"
types-flask-cors = "^4.0.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "init"

[tool.coverage.run]
parallel = true
# source = ["app"]
context = '${CONTEXT}'

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']
omit = ["tests/*.py"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ""
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ""
warn_unused_ignores = false

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["B008"]

[tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["mongodb_odm", "pydantic", "flask"]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
